Fixed input field alignment

--- a/src/app/newadvancedsearch/newadvancedsearch.component.css
+++ b/src/app/newadvancedsearch/newadvancedsearch.component.css
@@ -27,7 +27,6 @@
 }
 
 .form-control {
-  width: 135%;
   border-radius: 0px;
 }
 
